style.css
body {
	color: #333;
	font-family: proximanova !important;
	background-color: #ccc;
	overflow: auto;
}

@font-face {
	font-family: proximanova;
	src: url("proximanova.otf") format("opentype");
}

@font-face {
	font-family: proximanova-light;
	src: url("proximanova-light.ttf") format("truetype");
}

a {
	color: #333;
}

p {
	font-size: 1.1em;
	font-family: proximanova-light;
}

.sourcesans {
	font-family: 'Source Sans Pro', sans-serif !important;
	font-weight: 300;
}

#header {
	width: 100%;
	height: 90%;
	z-index: 1;
  background-color: #1b040a;
  position: relative;
  box-shadow: 0px 3px 8px #572430;
}

#mobile-header {
	display: none;
  z-index: 1;
  box-shadow: 0px 3px 8px #572430;
}

#mobile-header-buttons {
	width: 100%;
	font-size: 1.2em;
  background-color: #1b040a;
  box-shadow: 0px 3px 8px #333;
  z-index: 2;
  position: relative;
}

.mobile_button {
	text-align: center;
	color: #fff;
}

.mobile_buttons {
	transition: background-color 0.4s ease;
}

.mobile_buttons:hover {
	background-color: #333;
}

#mobile-header-buttons a {
	text-decoration: none !important;
}

.medium_margin_bottom {
	margin-bottom: 25px;
}

.mobile_button1 {
	width: 25%;
	border-right: 2px solid #333;
}
.mobile_button2 {
	left: 25%;
	width: 25%;
	border-right: 2px solid #333;
}
.mobile_button3 {
	left: 50%;
	width: 25%;
	border-right: 2px solid #333;
}
.mobile_button4 {
	left: 75%;
	width: 25%;
}

.centered {
	text-align: center;
}

.vertical_center_container {
  position: relative;
  top: 50%;
  -webkit-transform: translateY(-50%);
}

.relative {
	position: relative;
}

.absolute {
	position: absolute;
}

.large {
	font-size: 2.75em;
}

.medium {
	font-size: 1.75em;
}

.light {
	font-family: proximanova-light !important;
}

.auto_margin {
	margin-left: auto;
	margin-right: auto;
}

.header_image {
	height: 100%;
	width: 80%;
	background-repeat: no-repeat;
  background-image: url("erin_singer_cover.png");
  background-image: -webkit-image-set(
    url("erin_singer_cover.png")    1x,
    url("erin_singer_cover@2x.png") 2x
  );
  background-size: cover;
}

.header_buttons {
	position: absolute;
	font-size: 1.5em;
	color: #ffffff;
	top: 0;
	right: 0;
	width: 20%;
	height: 100%;
	text-align: center;
}

@media only screen and (min-device-width : 200px) and (max-device-width : 899px) and (orientation : portrait) { 
	body {
		font-size: 2.0em;
	}
	p {
		font-size: 1.2em;
		font-family: proximanova !important;
	}
	.mobile_center {
		text-align: center !important;
	}
	.section {
		padding: 5% 5% !important;
	}
	#header {
		display: none;
	}
	#mobile-header {
		display: block;
	}
	#mobile-header-buttons {
		height: 200px;
		font-size: 1.2em;
		font-family: proximanova !important;
	}
	.mobile_buttons {
		height: 200px;
	}
	.mobile_profile_image {
		max-width: 400px;
	}
	.mobile_picture_section {
		display: block !important;
	}
	.tutera_image {
		margin-top: 50px;
		height: 500px !important;
	}
	.beamit_mobile {
		padding-right: 4%;
		margin-bottom: 20px !important;
		height: 300px !important;
	}
	.mobile_experience_image {
		display: block !important;
	}
	.sandcastle {
		height: 100% !important;
		width: 100% !important;
		right: 5px !important;
	}
	.experience_text {
		width: 100% !important;
		padding-bottom: 1px !important;
	}
	.experience_image_container {
		display: none;
	}
	.profile_container {
		display: none;
	}
	.about_text {
		width: 100% !important;
		margin-left: 0 !important;
		padding-left: 0 !important;
		border-left: 	none !important;
	}
	.big_list {
		display: none !important;
	}
	.little_list {
		display: block !important;
	}
	.little_card {
		height: 300px !important;
	}
	.small_footer {
		display: none !important;
	}
	.big_footer {
		display: block !important;
	}
}

@media (max-width : 899px) { 
	#header {
		display: none;
	}
	.mobile_center {
		text-align: center !important;
	}
	#mobile-header {
		display: block;
	}
	#mobile-header-buttons {
		height: 150px;
		font-size: 1.5em;
		font-family: proximanova-light !important;
	}
	.mobile_buttons {
		height: 150px;
	}
	.mobile_profile_image {
		max-width: 200px;
	}
	.mobile_picture_section {
		display: block !important;
	}
	.tutera_image {
		margin-top: 30px;
	}
	.beamit_mobile {
		padding-right: 4%;
		margin-bottom: 20px !important;
		height: 150px !important;
	}
	.mobile_experience_image {
		display: block !important;
	}
	.experience_text {
		width: 100% !important;
		padding-bottom: 1px !important;
	}
	.experience_image_container {
		display: none;
	}
	.profile_container {
		display: none;
	}
	.about_text {
		width: 100% !important;
		margin-left: 0 !important;
		padding-left: 0 !important;
		border-left: 	none !important;
	}
	.big_list {
		display: none !important;
	}
	.little_list {
		display: block !important;
	}
	.small_footer {
		display: none !important;
	}
	.big_footer {
		display: block !important;
	}
}

.header_buttons a {
	color: #fff;
	text-decoration: none;
}

.header_button {
	position: relative;
	height: 25%;
	width: 100%;
	border-bottom: 1px solid #333;
	transition: background-color 0.4s ease;
}

.header_button:hover {
	background-color: #333;
}

.button_text {
	width: 90%;
}

.last {
	border-bottom: none;
}

.title {
	font-size: 2.75em;
	font-weight: 300;
}

.section:hover {
	cursor: default;
}

.section {
	padding: 5% 12% ;
	overflow: auto;
}

.about {
	background-color: #923a4e;
	color: #fff;
	text-shadow: 2px 2px 3px #762F3F;
	box-shadow: 0px 2px 5px #767575;
}

.about:hover {
	color: #fff;
}

.resume {
	font-size: 1.1em;
}

.resume:hover {
	color: #762F3F;
}

.experience {
	box-shadow: 0px 2px 5px #ABAAAA;
	background-repeat: no-repeat;
  background-image: url("texture_background.png");
  background-image: -webkit-image-set(
    url("texture_background.png")    1x,
    url("texture_background@2x.png") 2x
  );
  background-size: cover;
}

.about_text {
	height: 100%;
	margin-left: 250px;
	padding-left: 50px;
	border-left: 	1px solid #762F3F;
	float: left;
	text-shadow: 1px 1px 1px #762F3F;
}

.about a {
	color: #fff;
}

.about_text p {
	position: relative;
	z-index: 2;
}

.sandcastle {
	position: absolute;
	right: 30px;
	top: 20%;
	z-index: 0;
	height: 330px;
	width: 475px;
	background-size: contain;
	background-repeat: no-repeat;
	background-image: url("sandcastle.png");
	background-image: -webkit-image-set(
    url("sandcastle.png")    1x,
    url("sandcastle@2x.png") 2x
  );

}

.weird_margin {
	margin-bottom: -5px;
}

.profile_container {
	width: 200px;
	height: 100%;
	top: 0;
	position: absolute;
}

.mobile_picture_section {
	display: none;
}

.mobile_profile_image {
	height: auto;
	margin-top: 15px;
	border: 2px solid #762F3F;
	position: relative;
	z-index: 3;
}

.full {
	width: 100%;
	height: 100%;
	text-align: center;
}

.profile_image {
	border: 2px solid #762F3F;
	max-width: 200px;
	z-index: 3;
}

.fa-angle-right {
	margin-top: 0px;
	margin-left: 5px;
	font-size: 1.5em;
}

.mobile_experience_image {
	display: none;
}

.tutera_image {
	height: 300px;
	width: auto;
	bottom: 0;
}

.list_border {
	border-bottom: 1px solid #c2c2c2;
	margin-bottom: 35px;
}

.experience_image_container {
	width: 30%;
	height: 100%;
	top: 0;
	right: 0;
	position: absolute;
}

.beamit_image {
	right: 2% !important;
}

.experience_text {
	width: 60%;
	padding-bottom: 15px;
}

.experience_timeline {
	font-size: 1.5em;
}

.experience_header {
	margin-bottom: 5px;
}

.experience_footer {
	margin-top: 10px;
}

.experience_link:hover {
	color:#923a4e
}

.experience a {
	text-decoration: none;
}

.course_list {
	height: 175px;
	margin-bottom: 20px;
}

.col2 {
	left: 35%;
}

.col3 {
	left: 70%;
}

.class_title {
	line-height: 1.5em;
}

.class_description {
	line-height: 1.2em;
}

.course_col {
	height: 175px;
	width: 30%;
	padding: 5%;
	display: inline-block;
	margin-bottom: 5px;
	line-height: 1.2em;
	background-color: #E8E8E8;
	box-shadow: 2px 2px 2px #B6B6B6;
	transition: background-color 0.4s ease;
}

.courses a {
	text-decoration: none !important;
}

.course_col:hover {
	background-color: #ABABAB;
}

.little_list {
	display: none;
}

.little_card {
	height: 200px;
	margin-bottom: 35px;
	width: 70%;
	padding: 2% 10%;
	background-color: #E8E8E8;
	box-shadow: 2px 2px 2px #B6B6B6;
	transition: background-color 0.4s ease;
}

.little_card:hover {
	background-color: #ABABAB;
}

.contact {
	background-color: #1b040a;
	color: #fff !important;
	padding: 3% 5%;
}

.contact a {
	color: #fff !important;
	text-decoration: none;
}

.contact a:hover {
	color: #923a4e !important;
}

.footer {
	font-size: 1.2em;
}

.big_footer {
	display: none;
}

.fa-mobile {
	font-size: 1.3em;
}

.dot {
	padding: 0% 2%;
}

